@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2005/01/03 15:33:55 wennmach Exp $
+# $NetBSD: Makefile,v 1.19 2005/01/12 15:32:01 jlam Exp $
 #
 
 DISTNAME=	lapack
@@ -21,7 +21,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 WRKSRC=			${WRKDIR}/LAPACK
 DIST_SUBDIR=		lapack-20010201
 USE_BUILDLINK3=		YES
-USE_FORTRAN=		YES
+USE_LANGUAGES=		fortran
 USE_LIBTOOL=		YES
 BUILD_TARGET=		lapacklib
 
