@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.49 2004/10/03 00:12:57 tv Exp $
+# $NetBSD: Makefile,v 1.50 2005/01/12 15:32:01 jlam Exp $
 # FreeBSD Id: Makefile,v 1.18 1998/09/27 20:10:45 steve Exp
 
 DISTNAME=	octave-2.0.17
@@ -23,7 +23,7 @@ CONFLICTS+=	octave-2.1.*
 USE_BUILDLINK3=		yes
 USE_X11=		yes
 GNU_CONFIGURE=		yes
-USE_FORTRAN=		yes
+USE_LANGUAGES=		fortran
 USE_LIBTOOL=		yes
 USE_GNU_TOOLS+=		make
 CONFIGURE_ENV+=		FFLAGS="${CFLAGS}" OBJECT_FMT="${OBJECT_FMT}"
