@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2004/10/03 00:12:57 tv Exp $
+# $NetBSD: Makefile,v 1.12 2005/01/12 15:32:01 jlam Exp $
 
 DISTNAME=		quadpack-20001130
-PKGREVISION=	1
+PKGREVISION=		1
 CATEGORIES=		math
 MASTER_SITES=		${MASTER_SITE_LOCAL}
 
@@ -9,7 +9,7 @@ MAINTAINER=		tech-pkg@NetBSD.org
 COMMENT=		Fortran subroutines for the solution of definite univariate integrals
 
 NO_SRC_ON_FTP=		Already in MASTER_SITE_LOCAL
-USE_FORTRAN=		YES
+USE_LANGUAGES=		fortran
 WRKSRC=			${WRKDIR}/quadpack
 
 pre-build:
