@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2004/10/03 00:12:57 tv Exp $
+# $NetBSD: Makefile,v 1.17 2005/01/12 15:32:01 jlam Exp $
 
 DISTNAME=		tela-1.34
-PKGREVISION=	1
+PKGREVISION=		1
 CATEGORIES=		math
 MASTER_SITES=		ftp://ftp.funet.fi/pub/sci/math/tela/ \
 			ftp://sumppu.fmi.fi/pub/tela/
@@ -13,7 +13,7 @@ COMMENT=		Tensor Language - a programming language for scientific computing
 DEPENDS+=		plotmtv-[0-9]*:../../graphics/plotmtv
 
 GNU_CONFIGURE=		# defined
-USE_FORTRAN=		# defined
+USE_LANGUAGES=		fortran
 USE_X11=		# defined
 USE_BUILDLINK3=		yes
 
